--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
     "@react-native-community/datetimepicker": "^6.5.3",
     "@react-native-firebase/app": "^15.7.0",
     "@react-native-firebase/auth": "^15.7.0",
+    "@react-native-firebase/database": "^16.4.3",
     "@react-native-firebase/firestore": "^15.7.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.2",
+    "firebase": "^9.14.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.0",
+    "react-native-maps": "^1.3.2",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
     "react-native-select-dropdown": "^2.0.4",
